# AI_Material_And_Code

Agentic_AI/Tuto_1/: 1_simple_graph.ipynb  3_chatbot.ipynb  pyproject.toml
ComputerVision/OpenCV/OpenCV_Youtube_Tuto/Face_anonymizer/: face.py
